<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Stage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How Consultation Program Works"
            android:textSize="29dp"
            android:scaleY="1.5"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"/>

        <ImageView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/consult4"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You have to choose -- "
            android:gravity="center"
            android:textSize="23dp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/choose_a"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/choose_b"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingVertical="20dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:layout_gravity="center"
            android:text="It's a 3-Stage Process:"/>

        <ImageView
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/best_one_two_three"
            android:adjustViewBounds="true"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/one"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PRE-CONSULTATION STAGE"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage1_1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage1_2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage1_3"/>
            </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>






        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/two"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CONSULTATION STAGE"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage2_1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage2_2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage2_3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage2_4"/>
            </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>






        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/three"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="POST-CONSULTATION STAGE"
                    android:layout_gravity="center"
                    android:textStyle="bold|italic"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage3_1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2"
                    android:text=" -   "/>
                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/stage3_2"/>
            </LinearLayout>

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>