<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/food_plate"
                android:adjustViewBounds="true"/>

            <com.codesgood.views.JustifiedTextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:textSize="20dp" />

            <com.codesgood.views.JustifiedTextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                android:textSize="20dp" />

            <com.codesgood.views.JustifiedTextView
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I like to call my nutrition program &quot;Mitahar&quot;. Tap the banner to learn more about it."
                android:textSize="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:src="@drawable/downtwo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/l_yellow">

            <ImageView
                android:id="@+id/mitharLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:src="@drawable/mithar_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About Program"
                android:textSize="29dp"
                android:scaleY="1.3"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="italic|bold"/>

            <com.codesgood.views.JustifiedTextView
                android:layout_marginTop="20dp"
                android:paddingBottom="70dp"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Our exclusive consultation program is designed to be followed from across the globe. We work with clients across continents, across economical strata, across professions, across age groups and genders. \n \n Slide to learn more about it"
                android:background="#d9e6fc"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/slideGif"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="-70dp"
                android:rotation="90"
                android:src="@drawable/reddotarrow" />

            <View
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/pink"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@color/til">

                <ViewFlipper
                    android:padding="8dp"
                    android:id="@+id/v_flipper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/pink"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How it works"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="40dp"/>

            <ImageView
                android:id="@+id/oneTwoThreeLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/one_two_three"/>

            <TextView
                android:id="@+id/stage_process"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stage_process"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#FF9933"
                android:textSize="30dp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>